[package]
name = "rust_pi"
version = "0.1.0"
authors = ["Rob Dimsdale-Zucker <robert.dimsdale@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.0"
ctrlc = { version = "3.1.7", features = ["termination"] }
lazy_static = "1.4.0"
rand = "0.7.3"
rocket = "0.4.6"

[target.'cfg(target_arch = "arm")'.dependencies]
rppal = "0.11.3"
