[package]
name = "desk_controller"
version = "0.1.0"
authors = ["Rob Dimsdale-Zucker <robert.dimsdale@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.0"
ctrlc = { version = "3.1.7", features = ["termination"] }
env_logger = "0.8.2"
lazy_static = "1.4.0"
log = "0.4.11"
rand = "0.7.3"
rocket = "0.4.6"

[target.'cfg(target_arch = "arm")'.dependencies]
rppal = "0.11.3"
